<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ECOAIBLE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="loginghere">Already have an account? <u>Login</u> </string>
    <string name="signuphere">New account? Sign up</string>
    <string name="mobile_number">Mobile Number</string>

    <string name="permission_denied_text">Required permissions denied. Exiting</string>
    <string name="tensorflow_lite_logo_description">TensroFlow Lite logo</string>>
</resources>